VP-4853: Fix flex-wrap behaviour on safari

--- a/assets/scss/custom/_grid.scss
+++ b/assets/scss/custom/_grid.scss
@@ -65,6 +65,10 @@
     display: flex;
     flex-direction: column;
   }
+
+  &:before, &:after {
+    display: none;
+  }
 }
 
 
